2011-06-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/site.cpp: Set GB2312 as default encoding for zh_CN users.
	* build/snapshot-deb.sh: Fix syntax error for version number.

2011-06-12  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/sitepage.h: Add UAO user interface.
	* src/appconfig.cpp,
	src/appconfig.h,
	src/core/site.cpp,
	src/core/site.h,
	src/core/termview.cpp,
	src/core/termview.h,
	src/mainframe.cpp,
	src/sitepage.cpp,
	src/sitepage.h,
	NEWS: Implement UAO functionality.
	* debian/control: Remove unneeded dependency.
	* po/zh_CN.po,
	po/zh_TW.po: Update translation of UAO.

2011-06-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/uao.pl,
	build/uao241-b2u.txt,
	build/uao250-b2u.txt,
	src/core/Makefile.am,
	src/core/uao241.c,
	src/core/uao241.h,
	src/core/uao250.c.
	src/core/uao250.h: Add UAO utilities.

2011-04-24  Kan-Ru Chen  <kanru@kanru.info>

	* src/pcmanx_gtk2.cpp: Fix compilation warning.

	* src/core/termview.cpp (RecalcCharDimension): Always calculate
	character dimension based on Chinese font.
	(OnSize): Update.
	(SetFont*): Update.

	* src/core/termview.h (CView): Update signature.

2011-04-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* debian/watch: Update watch control file for uscan.

2011-04-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac,
	TODO: Remove firefox plugin option.
	* NEWS,
	configure.ac: Bump to 1.0

2011-04-13  Kan-Ru Chen  <kanru@kanru.info>

	* src/mainframe.cpp (OnShowHide): Now Alt+M only iconify the main
	window when tray icon is disabled.

2011-04-12  Kan-Ru Chen  <kanru@kanru.info>

	* src/view/telnetcon.cpp (OnNewIncomingMessage): Fix libnotify
	0.7.0 API compatibility.

2011-04-12  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/site.h: Fix compilation error of CStie. (Fixes issue 26 by
	chingpang)

2011-04-07  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
